--- a/HW2/HW.ipynb
+++ b/HW2/HW.ipynb
@@ -35,6 +35,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -66,69 +75,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[2, 2, 1],\n",
-       "       [1, 2, 4]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 39
-    }
-   ],
    "source": [
-    "a=np.array([[1,2,4],[2,2,1]])\n",
-    "np.random.shuffle(a)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([5, 9, 3, 2, 1, 6, 0, 4, 7, 8])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 44
-    }
-   ],
-   "source": [
-    "np.random.permutation(10)"
-   ]
-  },
-  {
-   "source": [
-    "class LogisticRegrasion(): \n",
-    "    #loss={'log':log_loss}\n",
-    "\n",
+    "class LogisticRegrasion():\n",
     "    def sigmoid(x): #sigmoid function \n",
     "        return 1/(1+np.exp(-x))\n",
+    "    ################################################ Optimization methods################################################\n",
     "    def GD(X,Y,alpha,itter): #Gradient Descent \n",
     "        n_s=len(Y)\n",
     "        n_f=X.shape[1]\n",
     "        w = np.random.uniform(-2,2,n_f+1)\n",
     "        X=np.append(X,np.ones((n_s,1)),axis=1)\n",
-    "        print(w)\n",
+    "        print('w start= ',w)\n",
     "        cost=np.zeros(itter)\n",
     "        for i in range(itter): \n",
-    "            dw = ((LogisticRegrasion.sigmoid(X@w) - Y) @ X )/n_s\n",
-    "            print(dw)\n",
+    "            dw,error=LogisticRegrasion.loss[self.loss_function](X,Y,w)\n",
+    "            dw=dw/n_s\n",
+    "            cost[i]=error/n_s\n",
+    "            #dw = ((LogisticRegrasion.sigmoid(X@w) - Y) @ X )/n_s\n",
     "            w=w-alpha*dw\n",
-    "            predictions=LogisticRegrasion.sigmoid(X@w)\n",
-    "            error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
-    "            cost[i]=(1/n_s) * sum(error)\n",
+    "            #predictions=LogisticRegrasion.sigmoid(X@w)\n",
+    "            #error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
+    "            #cost[i]=(1/n_s) * sum(error)\n",
     "        return w,cost\n",
     "    \n",
     "    def MBGD(X,Y,alpha,batch_size,epoch_number): #mini batch gradient descent\n",
@@ -136,7 +103,7 @@
     "        n_f=X.shape[1]\n",
     "        w = np.random.uniform(-2,2,n_f+1)\n",
     "        X=np.append(X,np.ones((n_s,1)),axis=1)\n",
-    "        print(w)\n",
+    "        print('w start= ',w)\n",
     "        cost=np.zeros(epoch_number*int(n_s/batch_size))\n",
     "        p=np.random.permutation(n_s)\n",
     "        X=X[p]\n",
@@ -146,11 +113,14 @@
     "\n",
     "                X_batch=X[j*batch_size:min(n_s,(batch_size+1)*j)] \n",
     "                Y_batch=Y[j*batch_size:min(n_s,(batch_size+1)*j)]\n",
-    "                dw = ((LogisticRegrasion.sigmoid(X_batch@w) - Y_batch) @ X_batch )/batch_size\n",
+    "                dw,error=LogisticRegrasion.loss[self.loss_function](X,Y,w)\n",
+    "                dw=dw/batch_size\n",
+    "                cost[i]=error/n_s\n",
+    "                #dw = ((LogisticRegrasion.sigmoid(X_batch@w) - Y_batch) @ X_batch )/batch_size\n",
     "                w=w-alpha*dw\n",
-    "                predictions=LogisticRegrasion.sigmoid(X@w)\n",
-    "                error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
-    "                cost[i]=(1/n_s) * sum(error)\n",
+    "                #predictions=LogisticRegrasion.sigmoid(X@w)\n",
+    "                #error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
+    "                #cost[i]=(1/n_s) * sum(error)\n",
     "\n",
     "        return w,cost\n",
     "    \n",
@@ -160,7 +130,7 @@
     "        w = np.random.uniform(-2,2,n_f+1)\n",
     "        dw_avg=np.zeros(n_f+1)\n",
     "        X=np.append(X,np.ones((n_s,1)),axis=1)\n",
-    "        print(w)\n",
+    "        print('w start= ',w)\n",
     "        cost=np.zeros(epoch_number*int(n_s/batch_size))\n",
     "        for i in range(epoch_number):\n",
     "            p=np.random.permutation(n_s)\n",
@@ -169,13 +139,17 @@
     "            for j in range(int(n_s/batch_size)):\n",
     "                X_batch=X[j*batch_size:min(n_s,(batch_size+1)*j)] \n",
     "                Y_batch=Y[j*batch_size:min(n_s,(batch_size+1)*j)]\n",
-    "                dw = ((LogisticRegrasion.sigmoid(X_batch@w) - Y_batch) @ X_batch )/batch_size\n",
+    "                dw,error=LogisticRegrasion.loss[self.loss_function](X,Y,w)\n",
+    "                dw=dw/batch_size\n",
+    "                cost[i]=error/n_s\n",
+    "\n",
+    "                #dw = ((LogisticRegrasion.sigmoid(X_batch@w) - Y_batch) @ X_batch )/batch_size\n",
     "                dw_avg = ( beta * dw_avg + (1-beta) * dw )\n",
     "                w=w-alpha*dw_avg\n",
     "                \n",
-    "                predictions=LogisticRegrasion.sigmoid(X@w)\n",
-    "                error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
-    "                cost[i]=(1/n_s) * sum(error)\n",
+    "                #predictions=LogisticRegrasion.sigmoid(X@w)\n",
+    "                #error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
+    "                #cost[i]=(1/n_s) * sum(error)\n",
     "        return w,cost\n",
     "\n",
     "    def rmsSGD(X,Y,alpha,batch_size,epoch_number,gamma,eps): #mini batch stochastic gradient descent with rms\n",
@@ -184,7 +158,7 @@
     "        w = np.random.uniform(-2,2,n_f+1)\n",
     "        dw_avg=np.zeros(n_f+1)\n",
     "        X=np.append(X,np.ones((n_s,1)),axis=1)\n",
-    "        print(w)\n",
+    "        print('w start= ',w)\n",
     "        cost=np.zeros(epoch_number*int(n_s/batch_size))\n",
     "        for i in range(epoch_number):\n",
     "            p=np.random.permutation(n_s)\n",
@@ -193,15 +167,27 @@
     "            for j in range(int(n_s/batch_size)):\n",
     "                X_batch=X[j*batch_size:min(n_s,(batch_size+1)*j)] \n",
     "                Y_batch=Y[j*batch_size:min(n_s,(batch_size+1)*j)]\n",
-    "                dw = ((LogisticRegrasion.sigmoid(X_batch@w) - Y_batch) @ X_batch )/batch_size\n",
+    "                dw,error=LogisticRegrasion.loss[self.loss_function](X,Y,w)\n",
+    "                dw=dw/batch_size\n",
+    "                cost[i]=error/n_s\n",
+    "                #dw = ((LogisticRegrasion.sigmoid(X_batch@w) - Y_batch) @ X_batch )/batch_size\n",
     "                dw_avg = ( gamma * dw_avg + (1-gamma) * dw**2 )\n",
     "                w = w - alpha*dw/np.sqrt(dw_avg+eps)\n",
-    "                predictions=LogisticRegrasion.sigmoid(X@w)\n",
-    "                error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
-    "                cost[i]=(1/n_s) * sum(error)\n",
+    "                #predictions=LogisticRegrasion.sigmoid(X@w)\n",
+    "                #error = (-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions))\n",
+    "                #cost[i]=(1/n_s) * sum(error)\n",
     "        return w,cost\n",
     "    \n",
+    "    ########################################## end optimization methods ######################################################################### \n",
+    "    ##########################################      loss functions      #########################################################################\n",
+    "    def log_loss(X,Y,w):\n",
+    "        predictions=LogisticRegrasion.sigmoid(X@w)\n",
+    "        error = sum((-Y * np.log(predictions)) - ((1-Y)*np.log(1-predictions)))\n",
+    "        dw = (LogisticRegrasion.sigmoid(X@w) - Y) @ X\n",
+    "        return dw,error\n",
+    "    \n",
     "    optimization={'GD':GD,'MBGD':MBGD,'MomentumSGD':MomentumSGD,'rmsSGD':rmsSGD}\n",
+    "    loss={'log':log_loss}\n",
     "    \n",
     "    def __init__(self,loss_function,optimization_method):\n",
     "        self.loss_function=loss_function\n",
@@ -276,12 +262,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 139,
+   "execution_count": 10,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +292,20 @@
       "number of epochs= 1\n",
       "gamma= 0.9\n",
       "epsilon= 1e-06\n",
-      "[1.69351701 0.65745864 1.38679336]\n"
+      "w start=  [ 0.16952254 -1.48975619  1.92474729]\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-c53877725b19>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLogisticRegrasion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'log'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'rmsSGD'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-7ab1853e9453>\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, Y)\u001b[0m\n\u001b[0;32m    178\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw_fit\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcost\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLogisticRegrasion\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimization\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimization_method\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepochs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbeta\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimization_method\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m'rmsSGD'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 180\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw_fit\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcost\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLogisticRegrasion\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimization\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimization_method\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepochs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-10-7ab1853e9453>\u001b[0m in \u001b[0;36mrmsSGD\u001b[1;34m(X, Y, alpha, batch_size, epoch_number, gamma, eps)\u001b[0m\n\u001b[0;32m     90\u001b[0m                 \u001b[0mX_batch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_s\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m                 \u001b[0mY_batch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_s\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 92\u001b[1;33m                 \u001b[0mdw\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLogisticRegrasion\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloss_function\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     93\u001b[0m                 \u001b[0mdw\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdw\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m                 \u001b[0mcost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mn_s\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
      ]
     }
    ],
@@ -317,22 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([ 1.62322885, -1.7760648 , -1.80558265])"
+       "'log'"
       ]
      },
      "metadata": {},
-     "execution_count": 141
+     "execution_count": 13
     }
    ],
    "source": [
-    "clf.w_fit"
+    "clf.loss_function"
    ]
   },
   {
