--- a/HW2/HW.ipynb
+++ b/HW2/HW.ipynb
@@ -23,6 +23,16 @@
  "cells": [
   {
    "source": [
+    "Ali Setareh Kokab \n",
+    "Student ID: 95100491 \n",
+    "ML in Physics - spring 2021 \n",
+    "Assignment 2 \n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "# import libraries "
    ],
    "cell_type": "markdown",
